2005-08-31  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.bitcode.or.ave:
	* dcwatdes.bitcode.xor.ave: Don't drop "1"'s if one of the input
	strings is shorter.
	* dcwatdes.table.calculatebitcode.ave: Allow to select Bitcode.xor
	to build up the pattern.
	
2005-08-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.dialog.setup.btnok.click.ave:
	* dialog/dcwatdes.dialog.setup.ded:
	* dcwatdes.i18n.createdictionaries.ave:
	* dcwatdes.model.epanet.ensurealiases.ave:
	* dcwatdes.model.epanet.pipe.updatenodefields.ave:
	* doc/en/dcwaterdesign.xml: New setup option "Enforce Data Model",
	implements RFE #1263010
	* build.xml: Fixed version number replacement in documentation, 
	building documentation, checking that extension has correct version 
	number
	* doc/build.xml:
	* doc/docbook_pdf.xsl: Using SVG icons

2005-08-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml: Fixed Version number replacement in NSIS file;
	included installer build
	* dcwaterdesignextension.make.ave: Version number is now 2.12.1+cvs
	* dcwatdes.bitcode.or.ave:
	* dcwatdes.bitcode.xor.ave: Fixed bug that prevented execution of
	the commands
	
2005-08-12  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml: Fixed md5sum creation
	* doc/en/dcwaterdesign.xml:
	* installer/dc_water_design_extension.nsi:
	* dcwatdesextension.make.ave: Version number is now 2.12.1
	
2005-08-11  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml: Write md5sum.txt
	
2005-08-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.project.extractmodel.ave: 
	* doc/en/dcwaterdesign.xml: Added function to extract models based on
	the bytecode
	* dcwatdes.project.splitmodel.ave: Stop with error message if empty
	string or NULL is encountered in zone field.
	* build.xml: Version number is now transferred to manual and nsis file
	* installer/dc_water_design_extension.nsi: Fixed several problems with
	Start Menu shortcuts
	* dcwatdesextension.make.ave: Version number is 2.12 now
