@@ -53,6 +53,8 @@ for each strTheme in {"Pipes", "Junctions", "Pumps", "Reservoirs", "Tanks", "Val
   end
 end
 
+blnCreateViews = MsgBox.yesNo("Create a view for each model?", "DC Water Design", true)
+
 ' Summarize by Zone
 
 thmPipes = dicThemes.get("Pipes")
@@ -68,6 +70,11 @@ flnBaseDirectory = ftbPipes.getSrcName.getFileName.returnDir
 for each numI in 0..(numWidth-1)
   flnZoneDirectory = FileName.merge(flnBaseDirectory.getFullName, "model\"+(numI+1).asString)
   av.run("DCWatDes.System.makeDir", flnZoneDirectory.getFullName)
+  if(blnCreateViews)then
+    viewModel = View.make
+    viewModel.setName("Model "+(numI+1).asString)
+    av.getProject.addDoc(viewModel)
+  end
   ' Loop over all themes
   for each thmTheme in dicThemes
     ftbTheme = thmTheme.getFTab
@@ -76,8 +83,13 @@ for each numI in 0..(numWidth-1)
     ftbTheme.setDefinition(strDefinition)
     if(ftbTheme.getNumRecords > 0)then
       flnThemeName = FileName.merge(flnZoneDirectory.getFullName, ftbTheme.getSrcName.getFileName.getBaseName)
-      ftbTheme.export(flnThemeName, ftbTheme.getShapeClass, false)
+      ftbExtracted = ftbTheme.export(flnThemeName, ftbTheme.getShapeClass, false)
       ftbTheme.setDefinition(strOldDefinition)
+      if(blnCreateViews)then
+        thmExtracted = FTheme.make(ftbExtracted)
+        viewModel.addTheme(thmExtracted)
+        thmExtracted.setVisible(true)
+      end
     end
   end
 end
